# cp-handbook

./: .gitignore  ARCHITECTURE_NOTES_CHUNK4A.md  ARCHITECTURE_NOTES_MATERIALIZATION.md  ARCHITECTURE_NOTES_NOTEBOOK_SITE.md  COMMIT_MESSAGE.txt  PROJECT_DIRECTION.md  README.md  evolution_events.py  evolution_log.py  evolution_stats.py  materialize_engine.py  notebook_site.py  pyproject.toml  ruff.toml  settings.py  settings.toml  template_engine.py  test_settings.py
config/: settings.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_NOTES_COMPILER.md  ARCHITECTURE_NOTES_EVOLUTION.md  ARCHITECTURE_NOTES_LEARNING.md  ARCHITECTURE_NOTES_NOTEBOOK.md  DEVELOPER_NOTES_SYNC.md  MANIFESTO.md  PRODUCT.md
examples/: algorithm_page.json  generate_examples.py  mistake_page.json  pattern_page.json  problem_page.json
tests/: conftest.py  test_beautiful_notes.py  test_compiler_algorithm.py  test_compiler_algorithm_evolution.py  test_compiler_contest.py  test_compiler_determinism.py  test_compiler_examples_comparison.py  test_compiler_golden.py  test_compiler_graph_integration.py  test_compiler_large_vault.py  test_compiler_mistake.py  test_compiler_pattern.py  test_compiler_problem.py  test_compiler_registry.py  test_compiler_round_trip.py  test_contest_metadata.py  test_evolution_engine.py  test_evolution_events.py  test_evolution_log.py  test_evolution_stats.py  test_folders.py  test_graph_builder.py  test_graph_duplicates.py  test_graph_export.py  test_graph_facade.py  test_graph_index.py  test_graph_node_edge.py  test_graph_resolver.py  test_graph_search.py  test_graph_traversal.py  (+41 more)
(+103 files in other folders)
